kube/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubecounter-client-svc
  labels:
    app.kubernetes.io/name: kubecounter
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP

  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http-web

  selector:
    app.kubernetes.io/name: kubecounter
    app.kubernetes.io/component: frontend
