kube/base/frontend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubecounter-route
  namespace: kubecounter
spec:
  parentRefs:
  - name: mpes-gateway
    namespace: istio-system
  hostnames:
  - "kubecounter.mmlabs.me"
  rules:
  - backendRefs:
    - name:  kubecounter-client-svc
      port: 80
